{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 29,
  "lineage": "5be54bce-0ff3-62af-1fda-48d186e7bb77",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0401d9af72e8fd381",
            "arn": "arn:aws:ec2:us-east-1:402961397980:elastic-ip/eipalloc-0401d9af72e8fd381",
            "association_id": "eipassoc-0f67bb610cbe8ddbd",
            "domain": "vpc",
            "id": "eipalloc-0401d9af72e8fd381",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b505d9c890a52323",
            "private_dns": "ip-10-0-1-139.ec2.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-100-52-84-240.compute-1.amazonaws.com",
            "public_ip": "100.52.84.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "task-NAT-EIP"
            },
            "tags_all": {
              "Name": "task-NAT-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_Nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f058bc6b3ee6fcc",
            "arn": "arn:aws:ec2:us-east-1:402961397980:instance/i-0975356b1f0240a09",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "task-ec2-profile",
            "id": "i-0975356b1f0240a09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae21ef3439697939",
            "private_dns": "ip-10-0-2-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f58640931598d260",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec263f05dba0868e",
            "tags": {
              "Name": "task-Nginx-Priv"
            },
            "tags_all": {
              "Name": "task-Nginx-Priv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0242ed9897c6007ad"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ALB_SG",
            "aws_security_group.EC2_SG",
            "aws_subnet.Priv_A",
            "aws_vpc.task_vpc",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:internet-gateway/igw-05da62be91bd58181",
            "id": "igw-05da62be91bd58181",
            "owner_id": "402961397980",
            "tags": {
              "Name": "task-IGW"
            },
            "tags_all": {
              "Name": "task-IGW"
            },
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:402961397980:loadbalancer/app/task-alb/7b8ac03002234d3f",
            "arn_suffix": "app/task-alb/7b8ac03002234d3f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "task-alb-465263923.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:402961397980:loadbalancer/app/task-alb/7b8ac03002234d3f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0deae0c519cedd0c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f13ac0b6b5e8c3d"
              },
              {
                "subnet_id": "subnet-0a955d24d1a4ba803"
              }
            ],
            "subnets": [
              "subnet-04f13ac0b6b5e8c3d",
              "subnet-0a955d24d1a4ba803"
            ],
            "tags": {
              "Name": "task-ALB"
            },
            "tags_all": {
              "Name": "task-ALB"
            },
            "vpc_id": "vpc-0dc3c813fb023d827",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Pub_RT",
            "aws_route_table_association.Pub_B_assoc",
            "aws_route_table_association.Pub_assoc",
            "aws_security_group.ALB_SG",
            "aws_subnet.Pub_A",
            "aws_subnet.Pub_B",
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:402961397980:listener/app/task-alb/7b8ac03002234d3f/72c2c9dc433893c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:402961397980:targetgroup/task-tg/56e1b4693b688824",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:402961397980:listener/app/task-alb/7b8ac03002234d3f/72c2c9dc433893c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:402961397980:loadbalancer/app/task-alb/7b8ac03002234d3f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_lb.ALB",
            "aws_lb_target_group.TG",
            "aws_route_table.Pub_RT",
            "aws_route_table_association.Pub_B_assoc",
            "aws_route_table_association.Pub_assoc",
            "aws_security_group.ALB_SG",
            "aws_subnet.Pub_A",
            "aws_subnet.Pub_B",
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:402961397980:targetgroup/task-tg/56e1b4693b688824",
            "arn_suffix": "targetgroup/task-tg/56e1b4693b688824",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:402961397980:targetgroup/task-tg/56e1b4693b688824",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "task-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "task-TG"
            },
            "tags_all": {
              "Name": "task-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:402961397980:targetgroup/task-tg/56e1b4693b688824-20260217111757487200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:402961397980:targetgroup/task-tg/56e1b4693b688824",
            "target_id": "i-0975356b1f0240a09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.EC2_Nginx",
            "aws_lb_target_group.TG",
            "aws_security_group.ALB_SG",
            "aws_security_group.EC2_SG",
            "aws_subnet.Priv_A",
            "aws_vpc.task_vpc",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0401d9af72e8fd381",
            "association_id": "eipassoc-0f67bb610cbe8ddbd",
            "connectivity_type": "public",
            "id": "nat-0bdbc7965d53f82c1",
            "network_interface_id": "eni-0b505d9c890a52323",
            "private_ip": "10.0.1.139",
            "public_ip": "100.52.84.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a955d24d1a4ba803",
            "tags": {
              "Name": "task-NAT"
            },
            "tags_all": {
              "Name": "task-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.IGW",
            "aws_subnet.Pub_A",
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Priv_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:route-table/rtb-0485612799e2da923",
            "id": "rtb-0485612799e2da923",
            "owner_id": "402961397980",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bdbc7965d53f82c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-Priv-RT"
            },
            "tags_all": {
              "Name": "task-Priv-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.NAT",
            "aws_subnet.Pub_A",
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pub_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:route-table/rtb-0116906102b03feed",
            "id": "rtb-0116906102b03feed",
            "owner_id": "402961397980",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05da62be91bd58181",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-Pub-RT"
            },
            "tags_all": {
              "Name": "task-Pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04143ea76dcf9ebe0",
            "route_table_id": "rtb-0485612799e2da923",
            "subnet_id": "subnet-0ec263f05dba0868e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.NAT",
            "aws_route_table.Priv_RT",
            "aws_subnet.Priv_A",
            "aws_subnet.Pub_A",
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub_B_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a205d5af68df5650",
            "route_table_id": "rtb-0116906102b03feed",
            "subnet_id": "subnet-04f13ac0b6b5e8c3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Pub_RT",
            "aws_subnet.Pub_B",
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ea4f1f9ef68ec89",
            "route_table_id": "rtb-0116906102b03feed",
            "subnet_id": "subnet-0a955d24d1a4ba803"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Pub_RT",
            "aws_subnet.Pub_A",
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:security-group/sg-0deae0c519cedd0c6",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0deae0c519cedd0c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "task-ALB-SG",
            "name_prefix": "",
            "owner_id": "402961397980",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-ALB-SG"
            },
            "tags_all": {
              "Name": "task-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:security-group/sg-0242ed9897c6007ad",
            "description": "Allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0242ed9897c6007ad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0deae0c519cedd0c6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "task-EC2-SG",
            "name_prefix": "",
            "owner_id": "402961397980",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-EC2-SG"
            },
            "tags_all": {
              "Name": "task-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ALB_SG",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Priv_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:subnet/subnet-0ec263f05dba0868e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec263f05dba0868e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "402961397980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-Priv-A"
            },
            "tags_all": {
              "Name": "task-Priv-A"
            },
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:subnet/subnet-0a955d24d1a4ba803",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a955d24d1a4ba803",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "402961397980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-Pub-A"
            },
            "tags_all": {
              "Name": "task-Pub-A"
            },
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:subnet/subnet-04f13ac0b6b5e8c3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f13ac0b6b5e8c3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "402961397980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-Pub-B"
            },
            "tags_all": {
              "Name": "task-Pub-B"
            },
            "vpc_id": "vpc-0dc3c813fb023d827"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.task_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402961397980:vpc/vpc-0dc3c813fb023d827",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed315fdf1821abc9",
            "default_route_table_id": "rtb-093a10de1c041a681",
            "default_security_group_id": "sg-0b2197b704c99d5a3",
            "dhcp_options_id": "dopt-0e4f10d306c72f325",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc3c813fb023d827",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093a10de1c041a681",
            "owner_id": "402961397980",
            "tags": {
              "Name": "task_vpc"
            },
            "tags_all": {
              "Name": "task_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}